# semgr8s

./: .gitignore  Dockerfile  Makefile  README.md  app.py  configmaps.json  mkdocs.yml  pyproject.toml  requirements.txt  versions.json
.github/: dependabot.yml
dev/: 404.html  index.html  sitemap.xml
docker/: Dockerfile
docs/: README.md  SECURITY.md  concept.md  usage.md
helm/: Chart.yaml  values.yaml
rules/: deny-default-namespace.yaml  forbidden-namespaced-label.yaml  forbidden-pod-label.yaml  forbidden-workload-label.yaml  restrict-image-registry.yaml  template-autofix-rule.yaml  template-rule.yaml
semgr8s/: __main__.py  app.py  files.py  k8s_api.py  updater.py
templates/: ext.tpl  k8s.tpl  secret.tpl  webhook.tpl
tests/: README.md  conftest.py  failing_deployment.yaml  passing_deployment.yaml  requirements.txt  test_app.py  test_k8s_api.py  test_updater.py
v0.1.0/: 404.html  index.html  sitemap.xml
v0.1.1/: 404.html  index.html  sitemap.xml
v0.1.10/: 404.html  index.html  sitemap.xml
v0.1.11/: 404.html  index.html  sitemap.xml
v0.1.12/: 404.html  index.html  sitemap.xml
v0.1.13/: 404.html  index.html  sitemap.xml
v0.1.14/: 404.html  index.html  sitemap.xml
v0.1.15/: 404.html  index.html  sitemap.xml
v0.1.16/: 404.html  index.html  sitemap.xml
v0.1.17/: 404.html  index.html  sitemap.xml
v0.1.18/: 404.html  index.html  sitemap.xml
v0.1.19/: 404.html  index.html  sitemap.xml
v0.1.2/: 404.html  index.html  sitemap.xml
v0.1.20/: 404.html  index.html  sitemap.xml
v0.1.21/: 404.html  index.html  sitemap.xml
v0.1.3/: 404.html  index.html  sitemap.xml
v0.1.4/: 404.html  index.html  sitemap.xml
v0.1.5/: 404.html  index.html  sitemap.xml
v0.1.6/: 404.html  index.html  sitemap.xml
v0.1.7/: 404.html  index.html  sitemap.xml
v0.1.8/: 404.html  index.html  (+1 more)
(+242 files in other folders)
