[tool.poetry]
name = "semgr8s"
version = "0.0.0"
description = "Semgrep-based Policy controller for Kubernetes."
authors = ["Christoph Hamsen <christoph.hamsen@securesystems.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
APScheduler = "3.10.4"
Flask = "3.0.3"
PyYAML = "6.0.1"
semgrep = "1.78.0"
jsonpatch = "1.33"
cheroot = "10.0.1"

[tool.poetry.group.docs]
optional = false

[tool.poetry.group.docs.dependencies]
mkdocs-material = "9.5.27"
mkdocs-glightbox = "0.4.0"
mike = "2.1.2"

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
bandit = "1.7.9"
bandit-sarif-formatter = "1.1.1"
black = "24.4.2"
pylint = "3.2.5"

[tool.poetry.group.test]
optional = false

[tool.poetry.group.test.dependencies]
pytest = "8.2.2"
pytest-cov = "5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
